--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -103,7 +103,7 @@
         area.innerHTML = '';
         if (!me) {
           const a = document.createElement('a');
-          a.href = '/login';
+          a.href = '/auth/login';
           a.className = 'rounded bg-brand-600 px-3 py-2 text-sm';
           a.textContent = 'Login with Discord';
           area.appendChild(a);
