--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
           <div class="text-left">
             <h2 class="text-4xl sm:text-5xl md:text-6xl font-extrabold tracking-tight">
               <span class="bg-gradient-to-r from-cyan-300 via-indigo-400 to-purple-400 bg-clip-text text-transparent">
-                Build powerful Discord bots using aoi.js
+                Aoi.js RAG API
               </span>
             </h2>
             <p class="mt-4 max-w-xl text-slate-300 text-sm sm:text-base">
